--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   
   
   <link rel="shortcut icon" href="img/favicon.ico">
-  <title>HW1</title>
+  <title>OS-HW1</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:400,700|Roboto+Slab:400,700|Inconsolata:400,700" />
 
   <link rel="stylesheet" href="css/theme.css" />
@@ -38,7 +38,7 @@
     <nav data-toggle="wy-nav-shift" class="wy-nav-side stickynav">
     <div class="wy-side-scroll">
       <div class="wy-side-nav-search">
-        <a href="." class="icon icon-home"> HW1</a>
+        <a href="." class="icon icon-home"> OS-HW1</a>
         <div role="search">
   <form id ="rtd-search-form" class="wy-form" action="./search.html" method="get">
     <input type="text" name="q" placeholder="Search docs" title="Type search term here" />
@@ -78,7 +78,7 @@
       
       <nav class="wy-nav-top" role="navigation" aria-label="top navigation">
         <i data-toggle="wy-nav-top" class="fa fa-bars"></i>
-        <a href=".">HW1</a>
+        <a href=".">OS-HW1</a>
       </nav>
 
       
@@ -186,5 +186,5 @@
 
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-10-28 17:14:09.766858+00:00
+Build Date UTC : 2020-10-28 18:13:12.167309+00:00
 -->
