--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
           {title: "HW1", url: "#_top", children: [
               {title: "Debian", url: "#debian" },
               {title: "Mabox Linux", url: "#mabox-linux" },
+              {title: "Group Members", url: "#group-members" },
           ]},
         ];
 
@@ -167,6 +168,16 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 </ul> 
 </div>
 
+<h2 id="group-members">Group Members</h2>
+<p dir="rtl">
+<ul>
+<li><a href="https://github.com/neginjafariii">Negin Jafari</a></li>
+<li><a href="https://github.com/MohsenDehghankar">Mohsen Dehghankar</a></li>
+<li><a href="https://github.com/Jarrahi-MM">MohammadMahdi Jarrahi</a></li>
+<li><a href="https://github.com/alishirmohammadi">Ali Shirmohammadi</a></li>
+</ul>
+</p>
+
 <!-- [Go To Help!](./help.md) -->
 
   <br>
@@ -202,5 +213,5 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 </html>
 <!--
 MkDocs version : 1.1.2
-Build Date UTC : 2020-10-28 18:22:52.763282+00:00
+Build Date UTC : 2020-10-28 18:40:33.112504+00:00
 -->
