update debian arch

--- a/debian/index.html
+++ b/debian/index.html
@@ -185,15 +185,15 @@ Hard Drive:
 </p>
 
 <p dir="rtl">
-برای حافظه گرافیکی در اینترنت محدودیتی پیدا نکردم. اما به شخصه روی VM با حافظه گرافیکی 16MB نصب کردم و مشکلی نداشت.
-نسخه هایی از دبیان قابلیت پشتیبانی از PAE را دارند.
+محدودیت حافظه گرافیکی بستگی به محیط گرافیکی انتخابی ما دارد. اما به شخصه روی VM با حافظه گرافیکی 16MB نصب کردم و مشکلی نداشت.
+نسخه هایی از دبیان قابلیت پشتیبانی از PAE را دارند.و<br>
+کرنل لینوکس از NX bit بر روی پردازنده هایی که این ویژگی را دارند، پشتیبانی می‌کند.<br>
 
 </p>
 
 <p dir="rtl">
-شناسایی وب کم و کارت شبکه و … بستگی به سخت افزار دارد. اگر درایور های سخت افزار ما برای دبیان موجود باشد، پشتیبانی می‌شود.
-درباره پشتیبانی از کارت گرافیک نیز همان مسيله قبلی برقرار است. برای کارت های گرافیک مشهور درایور هایی نوشته شده است که قابل استفاده اند.
-
+شناسایی وب کم و کارت شبکه و … بستگی به سخت افزار دارد. اگر درایور های سخت افزار ما در کرنل لینوکس باشند، پشتیبانی می‌کند.
+درباره پشتیبانی از کارت گرافیک نیز همان مسئله قبلی برقرار است. برای کارت های گرافیک مختلف هم درایور های open source وجود دارد و هم ابزار های proprietary.
 </p>
 
 <h2 id="_3"><a name="package"></a> <p dir="rtl" style="font-size: 20px"> مدیریت بسته</h2>
