add out distro specs

--- a/our_distribution/index.html
+++ b/our_distribution/index.html
@@ -77,49 +77,73 @@ if (is_top_frame) { $('body').addClass('wm-top-page'); }
 <li> ویژگی های کلی 
 
 <ul>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; نام  </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; کابران هدف </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; تصویر لوگو </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; plymouth</li>
+    <li> نام :</li> 
+    <li> کابران هدف: دانش آموزان</li>
+    <li> تصویر لوگو </li>
+    <li> plymouth: دارد</li>
+    <li> ابزارها: 
+    <ul>
+    <li>فعال بودن SSH و vnc server</li>
+    <li>VLC player</li>
+    <li>برنامه شاد</li>
+    <li>Screen Recorder</li>
+    <li>Note tools</li>
+    <li>...</li>
+    </ul>
+    </li>
+
 </ul>
 
 </li>
 
 <li> سخت افزار
 <ul>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; معماری پردازنده هدف </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; پشتیبانی از PAE</li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; پشتیبانی از NX</li>
+    <li> معماری پردازنده هدف: amd64, arm64</li>
+    <li> پشتیبانی از NX: بله</li>
 </ul>
 </li>
 
-<li> مدیریت بسته </li> 
-<li> مدیر فایل </li>
-<li> میز کار 
+<li> مدیریت بسته: apt </li> 
+<li> مدیر فایل: هنوز تصمیم گرفته نشد. <a href="https://www.tecmint.com/top-best-lightweight-linux-file-managers/">لینک</a> </li>
+<li> میز کار : Gnome, Xfce
 <ul>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; افزونه ها</li>
+    <li>افزونه ها
+    <ul>
+    <li>تقویم شمسی</li>
+    <li>مدیریت ددلاین ها</li>
+    <li>مشاهده کیفیت اتصال به اینترنت</li>
+    <li>...</li>
+    </ul>
+    </li>
 </ul>
 </li>
-<li> نصاب</li>
+<li> نصاب
+<ul>
+<li>پارتیشن بندی ساده</li>
+<li>داشتن نسخه بدون نیاز به نصب</li>
+<li>نیاز به ساختن یک اکانت با دسترسی بیشتر برای والدین!</li>
+<li>...</li>
+</ul>
+</li>
 <li> امنیت
 <ul>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; کنترل دسترسی </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; authentication </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; امکان رمز فایل </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; همگام سازی با حساب های کاربری </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; کنترل دسترسی به تجهیزات </li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; ارزیابی بسته ها </li>
+    <li> کنترل دسترسی : DAC</li>
+    <li> احراز هویت: PAM </li>
+    <li> امکان رمز فایل : رمز فایل</li>
+    <li> همگام سازی با حساب های کاربری: Google, Github, Dropbox, .. </li>
+    <li> کنترل دسترسی به تجهیزات : مدیریت دسترسی به تجهیزات مثل وب کم و میکروفون برای هر برنامه</li>
+    <li> ارزیابی بسته ها : با مدیر بسته انجام می شود.</li>
 </ul>
 </li>
 <li> ساخت توزیع 
 <ul>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; سیستم عامل پایه (پدر)</li>
+    <li>&nbsp;&nbsp;&nbsp;&nbsp; سیستم عامل پایه (پدر): Ubuntu</li>
 </ul>
 </li>
 <li> مستندات
 <ul>
-<li> مستند فنی</li>
-    <li>&nbsp;&nbsp;&nbsp;&nbsp; مستند کاربری (راهنما)</li>
+<li> مستند فنی: دارد</li>
+<li> مستند کاربری: دارد (به زبان ساده با محتوا مثل ویدیو)</li>
 </ul>
 </li>
 </ul>
