--- a/debian/index.html
+++ b/debian/index.html
@@ -647,7 +647,18 @@ configure the grub<br>
 </p>
 
 <h2 id="_10"><a name="doc"></a> <p dir="rtl" style="font-size: 20px"> مستندات</h2>
-<p>Ali </p>
+<p dir="rtl">
+مستندات سایت دبیان کاملترین منبع موجود می‌باشد:
+</p>
+<p><a href="https://www.debian.org/doc/">https://www.debian.org/doc/</a></p>
+<p dir="rtl">
+که در آن به تفصیل به نحوه‌ی نصب، به روز رسانی، استفاده از Command line، پکیج منیجر apt و… پرداخته شده است.
+</p>
+
+<p dir="rtl">
+همچنین در لینک زیر تعدادی از بسته‌های پروژه‌های توسعه یافته نگهداری می‌شوند که می‌توان از آن‌ها استفاده کرد یا در توسعه‌ی آن‌ها مشارکت نمود.
+</p>
+<p><a href="https://github.com/Debian">https://github.com/Debian</a></p>
 
   <br>
     
