--- a/mabox/index.html
+++ b/mabox/index.html
@@ -135,7 +135,20 @@ no plymouth
 </p>
 
 <h2 id="_2"><a name="hardware"></a> <p dir="rtl" style="font-size: 20px"> مشخصات سخت افزار</h2>
-<p>Ali </p>
+<p dir="rtl">
+ابتدا این توزیع بر روی یک ماشین مجازی با رم ۴ گیگابایت و ۳۲ گیگابایت هارد دیسک و ۱۶ مگابایت حافظه‌ی پردازنده‌ی گرافیکی نصب شد.
+
+</p>
+<p dir="rtl">
+
+همچنین روی سیستم‌هایی با حافظه‌ی Ram حداقل ۱ گیگابایت هم نصب می‌شود. اما با کمتر از ۱ گیگابایت رم امکان اجرا وجود ندارد.
+
+</p>
+<p dir="rtl">
+
+همچنین این توزیع تنها بر روی پردازنده‌های amd64 نصب می‌شود و نسخه‌های دیگر آن هنوز منتشر نشده است.
+</p>
+
 <h2 id="_3"><a name="package"></a> <p dir="rtl" style="font-size: 20px"> مدیریت بسته</h2>
 <p dir="rtl">
 یکی از قابلیت های بسیار جالب این توزیع، قابلیت نصب چندین kernel و انتخاب بین آن‌ها است.<br>
@@ -286,7 +299,15 @@ ssh://user@server/directory/to/browse<br>
 
 <p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/mabox-filemanager-6.png" /></p>
 <h2 id="_5"><a name="desktop"></a> <p dir="rtl" style="font-size: 20px"> میزکار</h2>
-<p>Ali</p>
+<p dir="rtl">
+توزیع mabox به طور پیشفرض از محیط دسکتاب xfce استفاده می‌کند.<br>
+</p>
+
+<p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/mabox-xfce.png" /></p>
+<p dir="rtl">
+اما همانند manjaro و دیگر توزیع‌های مشابه می‌توان سایر محیط‌های دسکتاپ مانند gnome را نیز بر روی آن نصب کرد:
+</p>
+<p><img alt="" src="https://github.com/MohsenDehghankar/os-hw1/blob/gh-pages/images/mabox-gnome.png?raw=true" /></p>
 <h2 id="_6"><a name="install"></a> <p dir="rtl" style="font-size: 20px"> نصاب</h2>
 <p dir="rtl">
 متاسفانه نام آن را نتوانستم پیدا کنم.<br>
