--- a/debian/index.html
+++ b/debian/index.html
@@ -382,6 +382,25 @@ image viewer<br></p>
 
 </p>
 
+<p dir="rtl">
+در gnome اضافه کردن extension و شخصی سازی با ابزارهایی نظیر tweak و dconf-editor قابل انجام است.
+</p>
+
+<p dir="rtl">
+امکاناتی که tweak‌در اختیار ما قرار می دهد در این عکس قابل مشاهده هستند.
+</p>
+<p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/tweak.png" /></p>
+<p dir="rtl">
+در بخش application می توان تنظیمات مربوط به cursor و theme‌و از این قبیل انجام داد.<br>
+در بخش extension می توان قابلیت های مختلف را فعال و یا غیر فعال کرد.
+</p>
+
+<p dir="rtl">
+ابزار dconf-editor قابلیت اعمال تنظیمات خیلی بیشتر و حتی سطح پایین تری را که به طور عادی در بخش تنظیمات قابل دیدن نیست، می دهد.<br>
+همان طور که از شکل هم می توان دید، این ابزار ساختار درخت گونه ای از دسته بندی ها های مختلف می دهد. (باید دقت کرد که بدون اطلاع دست به تغییر کانفیگ نزنیم چون ممکن است مشکل ایجاد شود.)
+</p>
+
+<p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/dconf.png" /></p>
 <h2 id="_6"><a name="install"></a> <p dir="rtl" style="font-size: 20px"> نصاب</h2>
 <p dir="rtl">
 نصاب دبین :<br>
