add negin changes

--- a/debian/index.html
+++ b/debian/index.html
@@ -414,6 +414,11 @@ image viewer<br></p>
 </p>
 
 <p dir="rtl">
+تاکنون پاسخی دریافت نکردم و در اینترنت مطالب مرتبطی نیافتم .<br>
+لازم به ذکر است این نصاب در debian10 افزوده شده است و راجع به اینکه قبل از calamares نصاب دبین چه بوده اطلاعاتی نیافتم تا میزان تغییرات را بررسی کنم. صرفا از آن تحت عنوان debian-installer یاد شده بود و جزیاتی عنوان نشده بود که بتوانم درباره ی آن تحقیق کنم .
+</p>
+
+<p dir="rtl">
 تعداد گام مورد نیاز برای نصب:<br>
 گام های تعاملی با کاربر:<br>
 
