--- a/mabox/index.html
+++ b/mabox/index.html
@@ -305,7 +305,28 @@ ssh://user@server/directory/to/browse<br>
 
 <p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/mabox-xfce.png" /></p>
 <p dir="rtl">
-اما همانند manjaro و دیگر توزیع‌های مشابه می‌توان سایر محیط‌های دسکتاپ مانند gnome را نیز بر روی آن نصب کرد:
+دارای دو پنل جانبی در اطراف صفحه است که برای دسترسی سریعتر قرار داده شده اند .<br>
+همچنین میتوان به سادگی  بوکمارک های اضافه شده را در پنل سمت چپ صفحه یافت .<br>
+
+</p>
+
+<p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/mabox_desktop.png" /></p>
+<p dir="rtl">
+در پنل سمت راست صفحه نیز میتوان به تنظیمات دست یافت .<br><br>
+
+همچنین بر روی صفحه conky هایی نیز وجود دارند که وضعیت cpu و ram و دانلود , … را نشان می دهند .<br>
+از طریق منوی mabox control center میتوان آن ها را ویرایش کرد .
+</p>
+
+<p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/mabox_desktop2.png" /></p>
+<p dir="rtl">
+کاربرپسندی :<br>
+به نظرم وجود sidepannel ها کار با محیط میزکار را آسان تر کرده است.<br>
+اما وجود conky و پویایی میزکار ممکن است به نظر بعضی از کاربران جالب نباشد .<br>
+</p>
+
+<p dir="rtl">
+ همانند manjaro و دیگر توزیع‌های مشابه می‌توان سایر محیط‌های دسکتاپ مانند gnome را نیز بر روی آن نصب کرد:
 </p>
 <p><img alt="" src="https://github.com/MohsenDehghankar/os-hw1/blob/gh-pages/images/mabox-gnome.png?raw=true" /></p>
 <h2 id="_6"><a name="install"></a> <p dir="rtl" style="font-size: 20px"> نصاب</h2>
