add mahdi changes

--- a/debian/index.html
+++ b/debian/index.html
@@ -319,7 +319,7 @@ https://packages.debian.org/stable/subsectionName/<br>
 یه صورت پیش‌فرض از bookmark پشتیبانی نمی‌کند اما به راحتی می‌توان همان هدف را با ابزار های دیگرش پیاده کرد.<br>
 </p>
 
-<p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/filemanager.png" /></p>
+<p><img alt="" src="https://raw.githubusercontent.com/MohsenDehghankar/os-hw1/gh-pages/images/file_manager_update.jpg" /></p>
 <h2 id="_5"><a name="desktop"></a> <p dir="rtl" style="font-size: 20px"> میزکار</h2>
 <p dir="rtl">
 محیط دسکتاپ در دبین می توانید از بین گزینه های زیر در موقع نصب انتخاب شود:
