--- a/mabox/index.html
+++ b/mabox/index.html
@@ -183,7 +183,9 @@ no plymouth
 <p>  pacman -Qe </p>
 
 <p dir="rtl">
-بسته های وصله زده شده، دارای مخزن اختصاصی???????
+در مورد
+بسته های وصله زده شده، دارای مخزن اختصاصی
+چیزی پیدا نکردیم.
 </p>
 
 <h2 id="_4"><a name="file"></a> <p dir="rtl" style="font-size: 20px"> مدیر فایل</h2>
